# Clipboard-relay

./: .gitignore  README.md
agent/: README.md
agent/clipboard_relay_shared/: __init__.py  device.py  prompt.py
agent/macos/: .gitignore  README.md  config.example.json  pyproject.toml  一键安装.command
agent/macos/scripts/: install_launchagent.sh  uninstall_launchagent.sh
agent/macos/src/: clipboard_relay_shared
agent/macos/src/clipboard_relay_agent/: __init__.py  __main__.py  agent.py  config.py
agent/macos/tests/: test_agent.py  test_config.py  test_prompt_device_id.py
agent/windows/: README.md  agent.py  config.example.json  install_task.cmd  requirements.txt  uninstall_task.cmd
agent/windows/tests/: test_agent.py  test_prompt_device_id.py
docs/: README.md  protocol.md
docs/superpowers/plans/: 2026-07-10-connection-status.md  2026-07-11-password-auth-device-registration.md
docs/superpowers/specs/: 2026-07-10-connection-status-design.md  2026-07-11-password-auth-device-registration-design.md
server/: app.py  pyproject.toml
server/static/: index.html
server/tests/: test_devices.py  test_status.py  test_ui_frontend.py  test_ui_websocket.py
